# healthfiti-backend

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  minio.sh  sea_orm.sh  sea_orm_main.sh
entity-main/: Cargo.toml
entity-main/src/: billing_line_items.rs  feature_flags.rs  feature_usage_logs.rs  features.rs  global_system_logs.rs  insurance_dependents.rs  insurance_providers.rs  mod.rs  patient_access_permissions.rs  patient_billing.rs  patient_insurance.rs  patients.rs  payment_transactions.rs  prelude.rs  sea_orm_active_enums.rs  subscription_plan_features.rs  subscription_plans.rs  subscriptions.rs  tenant_features.rs  tenant_subscriptions.rs  tenants.rs  usage_metrics.rs
entity-tenant/: Cargo.toml
entity-tenant/src/: facilities.rs  facility_reviews.rs  facility_services.rs  facility_staff.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  service_categories.rs  service_reviews.rs  services.rs  users.rs
migration-main/: Cargo.toml
migration-main/src/: lib.rs  m20251123_235006_create_patients_table.rs  m20251124_001103_create_features_table.rs  m20251124_001203_create_subscription_plans_table.rs  m20251124_001220_create_subscription_plan_features_table.rs  m20251124_001437_create_tenants_table.rs  m20251124_002548_create_tenant_features_table.rs  m20251124_002621_create_tenant_subscriptions_table.rs  m20251124_125559_create_patient_access_permissions_table.rs  m20251128_175014_create_patient_insurance_table.rs  m20251128_180941_create_patient_billing_info_table.rs  main.rs  (+20 more)
migration-tenant/: Cargo.toml
src/: main.rs
src/cron_jobs/: all.rs  (+1 more)
(+126 files in other folders)
