[package]
name = "healthfiti-backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration-main", "migration-tenant", "entity-main", "entity-tenant"]

[dependencies]
migration_main = { path = "migration-main" }
migration_tenant = { path = "migration-tenant" }
entity_main = { path = "entity-main" }
entity_tenant = { path = "entity-tenant" }
actix-cors = "0.7.1"
actix-extensible-rate-limit = "0.4.0"
actix-multipart = "0.7.2"
actix-rt = "2.11.0"
actix-web = "4.12.0"
aws-config = { version = "1.8.11", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.10"
aws-sdk-s3 = "1.115.0"
chrono = "0.4.42"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.28"
reqwest = { version = "0.12.24", features = ["json"] }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
regex = "1.12.2"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
lettre = "0.11.19"
rust_decimal = { version = "1.39.0", features = ["macros"] }
chrono-tz = "0.10.4"
url = "2.5.7"
